add sbt test to ci test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,3 +21,5 @@ jobs:
           extraKey: scala-${{ matrix.scala }}
       - name: check compile
         run: sbt compile
+      - name: test
+        run: sbt test
