--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,8 +5,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # adopt-jdk 16 is latest. cf: https://adoptopenjdk.net/
-        java: [ '16.0' ]
+        java: [ '17.0' ]
         scala: [ '2.13.8', '3.0.0', '3.1.0' ]
     runs-on: ubuntu-latest
     steps:
@@ -14,7 +13,7 @@ jobs:
       - name: Setup JDK
         uses: olafurpg/setup-scala@v13
         with:
-          java-version: "adopt@1.${{ matrix.java }}"
+          java-version: "openjdk@1.${{ matrix.java }}"
       - name: Cache SBT
         uses: coursier/cache-action@v6
         with:
